<resources>
    <string name="app_name" translatable="false">SwiftTalk</string>
    <string name="register_by_google">Регистрация через Google</string>
    <string name="psychhosetext" translatable="false">Выберите специалиста, кому вы хотите отправить свое обращение или с кем вы хотите провести консультацию:</string>
    <string name="musictext" translatable="false">Здесь вы можете послушать раслаблющую музыку и посмотреть красивые видео</string>
    <string name="след">Следующий</string>
    <string name="last">Предыдущий</string>
    <string name="back">Обратно</string>
    <string name="regwithoutgoggle">Регистрация по почте</string>
    <string name="Name">Имя</string>
    <string name="textreg">Заполните данные</string>
    <string name="surname">Фамилия</string>
    <string name="next">Зарегистрироваться</string>
    <string name="by_signing_in_to_swifttalk_you_agree_to_our_terms_and_privacy_policy" translatable="false">By signing in to SwiftTalk, you agree to our Terms and Privacy Policy.</string>
    <string name="continues">ПРОДОЛЖИТЬ</string>
    <string name="english">Английский</string>
    <string name="russian">Русский</string>
    <string name="german_testing">German(Testing)</string>
    <string name="connect_with_people">Общаться с людьми</string>
    <string name="boost_my_career">Для развития в карьере</string>
    <string name="support_my_education">Для обучения</string>
    <string name="prepare_for_travel">Подготовка к путешествия</string>
    <string name="just_for_fun">Для развлечения</string>
    <string name="other">Другое</string>
    <string-array name="options">
        <item>Ответ 1</item>
        <item>Ответ 2</item>
        <item>Ответ 3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="your_answer">Введите ваш ответ</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="check">Проверить</string>
    <string name="text_for_check">Введите текст для проверки</string>
    <string name="stay_checking">Подождите, идет проверка...</string>
    <string name="no_errors_found">No errors found</string>
    <string name="_29_online">29 online</string>
    <string name="settings">Настройки</string>
    <string name="Achievment">Достижения</string>
    <string-array name="first_meeting_task">
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>
    <string name="first_connect">Первый коннект</string>
    <string name="first_time_meet">Первый раз запустили приложение</string>
    <string name="linguist_beginner">Языковой Экспериментатор</string>
    <string name="first_lesson">Пройдите свой первый урок</string>
    <string name="vocabulary_explorer">Словесный Путешественник</string>
    <string name="words50_achievment">Достигните 50 слов в вашем словарном запасе</string>
    <string name="conversation_starter">Мастер Общения</string>
    <string name="first_5_messages">Постройте свои первые 5 предложений на новом языке в чате</string>
    <string name="kazak_language">Қазақша</string>
</resources>