<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E3133"
    tools:context="com.example.Chatbotik.activity.Meeting">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_rounded_corner"
        android:lineSpacingExtra="10sp"
        android:padding="5dp"
        android:text="FFFFFFFFFFFFF"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/artifika"
        android:padding="10dp"
        android:text="@string/continues"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#2E3133"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView4"
        android:layout_width="249dp"
        android:layout_height="330dp"
        android:layout_marginBottom="176dp"
        android:src="@drawable/enothey"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:max="100"
        android:progress="20"
        android:progressTint="@color/blue"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/radiotapok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:text="@string/kazak_language"
                android:textColor="@color/white"
                android:textColorHighlight="@color/blue"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/russian"
                android:textColor="@color/white"
                android:textColorHighlight="@color/blue"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:clickable="false"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textColorHighlight="@color/blue"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/german_testing"
                android:textColor="@color/white"
                android:textColorHighlight="@color/blue"
                android:textSize="24sp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/checktapok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2">

        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/firstlevel"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/connect_with_people"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/firstlevel"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/boost_my_career"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/firstlevel"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/support_my_education"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/firstlevel"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/prepare_for_travel"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/check4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/firstlevel"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/just_for_fun"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/check5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:button="@drawable/checkbox_border_color"
            android:drawableStart="@drawable/firstlevel"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/other"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>